# kde_cpu_temp

./: CMakeLists.txt  README.md  cpu_temp.cpp  lornix_cpu_temp.cpp  metadata.desktop  plasma-applet-cpu_temp.desktop  plasma-applet-lornix_cpu_temp.desktop  plasma-applet-lornix_cpu_temp_automoc.cpp.files
